blink: Stop passing -Wno-c++0x-compat.
This flag has been around for a long time and got copied around a lot.
It hasn't been needed for at least two years (when we switched to C++11).

Also remove -Wno-unitialized, which looks like a workaround
for a gcc4.6 bug (which we no longer support).

Both flags were only passed in cflags, making linux and
android's warning flags different from Mac's and Windows's
(with clang/win).

No behavior change.

BUG=573778
R=jochen@chromium.org

Review URL: https://codereview.chromium.org/1575453003 .

Cr-Original-Commit-Position: refs/heads/master@{#368657}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 2e91c02baa4be245ec7b7f8e449f71a89ca7caaf

--- a/WebKit/Source/core/BUILD.gn
+++ b/WebKit/Source/core/BUILD.gn
@@ -253,12 +253,7 @@ source_set("remaining") {
     }
   }
 
-  if (is_android) {
-    # Due to a bug in gcc 4.6 in android NDK, we got warnings about
-    # uninitialized variable.
-    # TODO: try removing now that we are on GCC 4.8.
-    cflags += [ "-Wno-uninitialized" ]
-  } else {  # !is_android
+  if (!is_android) {
     sources -= [
       "layout/LayoutThemeAndroid.cpp",
       "layout/LayoutThemeAndroid.h",
